Fix tutorials on Safari Fix ability to highlight things that shouldn't be

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,12 @@
 
 canvas {
   -webkit-touch-callout: none !important;
-  user-select: none !important;
+  -webkit-user-select: none !important;
+}
+
+div,
+span {
+  -webkit-touch-callout: none !important;
   -webkit-user-select: none !important;
 }
 
@@ -99,7 +104,7 @@ body {
 
 .tutorial {
   width: 25%;
-  display: flex;
+  display: inline-block;
   justify-self: flex-end;
   font-size: 0.7rem;
 }
